--- a/boards/arm/zest_core_fmlr-72/zest_core_fmlr-72.dts
+++ b/boards/arm/zest_core_fmlr-72/zest_core_fmlr-72.dts
@@ -8,6 +8,7 @@
 #include <st/l0/stm32l0.dtsi>
 #include <st/l0/stm32l071.dtsi>
 #include <st/l0/stm32l071Xb.dtsi>
+#include <st/l0/stm32l071r(b-z)tx-pinctrl.dtsi>
 #include "sixtron_connector.dtsi"
 
 / {
