--- a/boards/arm/zest_core_fmlr-72/zest_core_fmlr-72.dts
+++ b/boards/arm/zest_core_fmlr-72/zest_core_fmlr-72.dts
@@ -92,14 +92,15 @@
 	status = "okay";
 	lora: sx1272@0 {
 		compatible = "semtech,sx1272";
-		reg = <0>;
+		reg = <0x0>;
 		reset-gpios = <&gpioc 2 GPIO_ACTIVE_LOW>;
 		dio-gpios = <&gpioa 1 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-		<&gpioa 6 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-		<&gpioa 7 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-		<&gpioc 4 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-		<&gpioc 5 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
+		            <&gpioa 6 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
+		            <&gpioa 7 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
+		            <&gpioc 4 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
+		            <&gpioc 5 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
 		spi-max-frequency = <DT_FREQ_M(16)>;
+		power-amplifier-output = "rfo";
 	};
 };
 
