--- a/boards/arm/zest_core_fmlr-72/zest_core_fmlr-72.dts
+++ b/boards/arm/zest_core_fmlr-72/zest_core_fmlr-72.dts
@@ -1,112 +1,113 @@
 /*
- * Copyright (c) 2023 CATIE
+ * Copyright (c) 2024 CATIE
  *
  * SPDX-License-Identifier: Apache-2.0
  */
 
-/dts-v1/;
-#include <st/l0/stm32l0.dtsi>
-#include <st/l0/stm32l071.dtsi>
-#include <st/l0/stm32l071Xb.dtsi>
-#include <st/l0/stm32l071r(b-z)tx-pinctrl.dtsi>
-#include "sixtron_connector.dtsi"
-
-/ {
-	model = "CATIE Zest Core FMLR-72 board";
-	compatible = "catie,zest-core-fmlr-72";
-
-	chosen {
-		zephyr,console = &usart2;
-		zephyr,shell-uart = &usart2;
-		zephyr,sram = &sram0;
-		zephyr,flash = &flash0;
-	};
-
-	leds {
-		compatible = "gpio-leds";
-		led_0: led_0 {
-			gpios = <&gpioh 0 GPIO_ACTIVE_HIGH>;
-			label = "User LED0";
-		};
-	};
-
-	gpio_keys {
-		compatible = "gpio-keys";
-		user_button: button {
-			label = "User Button";
-			gpios = <&gpioh 1 GPIO_ACTIVE_LOW>;
-		};
-	};
-
-	aliases {
-		led0 = &led_0;
-		sw0 = &user_button;
-		lora0 = &lora;
-	};
-};
-
-&clk_hsi {
-	status = "okay";
-};
-
-&pll {
-	div = <2>;
-	mul = <8>;
-	clocks = <&clk-hsi>;
-	status = "okay";
-};
-
-&rcc {
-	clocks = <&pll>;
-	clock-frequency = <DT_FREQ_M(32)>;
-	ahb-prescaler = <1>;
-	apb1-prescaler = <1>;
-	apb2-prescaler = <1>;
-};
-
-&usart1 {
-	pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
-	pinctrl-names = "default";
-	current-speed = <115200>;
-	status = "okay";
-};
-
-&usart2 {
-	pinctrl-0 = <&usart2_tx_pa2 &usart2_rx_pa3>;
-	pinctrl-names = "default";
-	current-speed = <115200>;
-	status = "okay";
-};
-
-&i2c1 {
-	pinctrl-0 = <&i2c1_scl_pb6 &i2c1_sda_pb9>;
-	pinctrl-names = "default";
-	status = "okay";
-	clock-frequency = <I2C_BITRATE_FAST>;
-};
-
-&spi2 {
-	pinctrl-0 = <&spi2_sck_pb10 &spi2_miso_pb14 &spi2_mosi_pb15>;
-	pinctrl-names = "default";
-	cs-gpios = <&gpioa 4 GPIO_ACTIVE_LOW>;
-	status = "okay";
-	lora: sx1272@0 {
-		compatible = "semtech,sx1272";
-		reg = <0x0>;
-		reset-gpios = <&gpioc 2 GPIO_ACTIVE_LOW>;
-		dio-gpios = <&gpioa 1 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-		            <&gpioa 6 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-		            <&gpioa 7 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-		            <&gpioc 4 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
-		            <&gpioc 5 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
-		spi-max-frequency = <DT_FREQ_M(16)>;
-		power-amplifier-output = "rfo";
-	};
-};
-
-&spi1 {
-	pinctrl-0 = <&spi1_sck_pb3 &spi1_miso_pb4 &spi1_mosi_pb5>;
-	pinctrl-names = "default";
-	cs-gpios = <&gpiob 2 GPIO_ACTIVE_LOW>;
-	status = "okay";
-};
+ /dts-v1/;
+ // #include <st/l0/stm32l0.dtsi>
+ #include <st/l0/stm32l071.dtsi>
+ #include <st/l0/stm32l071Xb.dtsi>
+ #include <st/l0/stm32l071r(b-z)tx-pinctrl.dtsi>
+ #include "sixtron_connector.dtsi"
+ 
+ / {
+	 model = "CATIE Zest Core FMLR-72 board";
+	 compatible = "catie,zest-core-fmlr-72";
+ 
+	 chosen {
+		 zephyr,console = &usart2;
+		 zephyr,shell-uart = &usart2;
+		 zephyr,sram = &sram0;
+		 zephyr,flash = &flash0;
+	 };
+ 
+	 leds {
+		 compatible = "gpio-leds";
+		 led_0: led_0 {
+			 gpios = <&gpioh 0 GPIO_ACTIVE_HIGH>;
+			 label = "User LED0";
+		 };
+	 };
+ 
+	 gpio_keys {
+		 compatible = "gpio-keys";
+		 user_button: button {
+			 label = "User Button";
+			 gpios = <&gpioh 1 GPIO_ACTIVE_LOW>;
+		 };
+	 };
+ 
+	 aliases {
+		 led0 = &led_0;
+		 sw0 = &user_button;
+		 lora0 = &lora;
+		 eeprom-0 = &eeprom;
+	 };
+ };
+ 
+ &clk_hsi {
+	 status = "okay";
+ };
+ 
+ &pll {
+	 div = <3>;
+	 mul = <6>;
+	 clocks = <&clk_hsi>;
+	 status = "okay";
+ };
+ 
+ &rcc {
+	 clocks = <&pll>;
+	 clock-frequency = <DT_FREQ_M(32)>;
+	 ahb-prescaler = <1>;
+	 apb1-prescaler = <1>;
+	 apb2-prescaler = <1>;
+ };
+ 
+ &usart1 {
+	 pinctrl-0 = <&usart1_tx_pa9 &usart1_rx_pa10>;
+	 pinctrl-names = "default";
+	 current-speed = <115200>;
+	 status = "okay";
+ };
+ 
+ &usart2 {
+	 pinctrl-0 = <&usart2_tx_pa2 &usart2_rx_pa3>;
+	 pinctrl-names = "default";
+	 current-speed = <115200>;
+	 status = "okay";
+ };
+ 
+ &i2c1 {
+	 pinctrl-0 = <&i2c1_scl_pb6 &i2c1_sda_pb9>;
+	 pinctrl-names = "default";
+	 status = "okay";
+	 clock-frequency = <I2C_BITRATE_FAST>;
+ };
+ 
+ &spi2 {
+	 pinctrl-0 = <&spi2_sck_pb10 &spi2_miso_pb14 &spi2_mosi_pb15>;
+	 pinctrl-names = "default";
+	 cs-gpios = <&gpioa 4 GPIO_ACTIVE_LOW>;
+	 status = "okay";
+	 lora: sx1272@0 {
+		 compatible = "semtech,sx1272";
+		 reg = <0x0>;
+		 reset-gpios = <&gpioc 2 GPIO_ACTIVE_LOW>;
+		 dio-gpios = <&gpioa 1 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
+					 <&gpioa 6 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
+					 <&gpioa 7 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
+					 <&gpioc 4 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>,
+					 <&gpioc 5 (GPIO_PULL_DOWN | GPIO_ACTIVE_HIGH)>;
+		 spi-max-frequency = <DT_FREQ_M(16)>;
+		 power-amplifier-output = "rfo";
+	 };
+ };
+ 
+ &spi1 {
+	 pinctrl-0 = <&spi1_sck_pb3 &spi1_miso_pb4 &spi1_mosi_pb5>;
+	 pinctrl-names = "default";
+	 cs-gpios = <&gpiob 2 GPIO_ACTIVE_LOW>;
+	 status = "okay";
+ };
