Added adc nexus

--- a/boards/catie/zest_core_fmlr-72/sixtron_connector.dtsi
+++ b/boards/catie/zest_core_fmlr-72/sixtron_connector.dtsi
@@ -47,6 +47,14 @@
                   <PWM2 0 0 &pwm2 1 0 0>,
                   <PWM3 0 0 &pwm22 2 0 0>;
     };
+
+    sixtron_connector_1_adc: sixtron-connector-1-adc {
+        compatible = "sixtron-adc";
+        #io-channel-cells = <1>;
+        io-channel-map = <ADC1 &adc1 8>,
+                         <ADC2 &adc1 9>,
+                         <ADC3 &adc1 11>;
+    };
 };
 
 sixtron_connector_1_i2c: &i2c1 {};
@@ -57,5 +65,6 @@ sixtron_i2c: &sixtron_connector_1_i2c {};
 sixtron_uart: &sixtron_connector_1_uart {};
 sixtron_spi: &sixtron_connector_1_spi {};
 sixtron_pwm: &sixtron_connector_1_pwm {};
+sixtron_adc: &sixtron_connector_1_adc {};
 
 sixtron_connector: &sixtron_connector_1 {};
