Fix core definition
Allows to use the whole internal flash memory.

--- a/boards/catie/zest_core_fmlr-72/zest_core_fmlr-72.dts
+++ b/boards/catie/zest_core_fmlr-72/zest_core_fmlr-72.dts
@@ -5,7 +5,7 @@
  */
 
 /dts-v1/;
-#include <st/l0/stm32l071Xb.dtsi>
+#include <st/l0/stm32l071Xz.dtsi>
 #include <st/l0/stm32l071r(b-z)tx-pinctrl.dtsi>
 #include <zephyr/dt-bindings/input/input-event-codes.h>
 #include "sixtron_connector.dtsi"
