--- a/boards/catie/zest_core_fmlr-72/zest_core_fmlr-72.dts
+++ b/boards/catie/zest_core_fmlr-72/zest_core_fmlr-72.dts
@@ -124,7 +124,7 @@ stm32_lp_tick_source: &lptim1 {
 	 * LSI freq is 37KHz but stm32_lptim driver is using 32000Hz
 	 * resulting in time running 1.13 faster than reality
 	 */
-	clocks = <&rcc STM32_CLOCK_BUS_APB1 0x80000000>,
+	clocks = <&rcc STM32_CLOCK(APB1, 31)>,
 		 <&rcc STM32_SRC_LSI LPTIM1_SEL(1)>;
 	status = "okay";
 };
